# mf2_i18n

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/mf2-i18n-build/: Cargo.toml
crates/mf2-i18n-build/src/: artifacts.rs  catalog_builder.rs  compiler.rs  config.rs  error.rs  extract_pipeline.rs  lib.rs  pack_encode.rs  parser.rs  platform.rs  project.rs  validator.rs
crates/mf2-i18n-cli/src/: command_build.rs  command_coverage.rs  command_extract.rs  command_pseudo.rs  command_sign.rs  command_validate.rs  main.rs
crates/mf2-i18n-core/src/: bytecode.rs  format_backend.rs  interpreter.rs  pack_catalog.rs
crates/mf2-i18n-embedded/: Cargo.toml
crates/mf2-i18n-embedded/src/: runtime.rs
crates/mf2-i18n-native/: Cargo.toml
crates/mf2-i18n-native/src/: lib.rs  localizer.rs  macros.rs
crates/mf2-i18n-runtime/: Cargo.toml
crates/mf2-i18n-runtime/src/: lib.rs  loader.rs  runtime.rs
crates/mf2-i18n-std/: Cargo.toml
crates/mf2-i18n-std/src/: lib.rs
crates/mf2_i18n/: Cargo.toml
crates/mf2_i18n/src/: lib.rs
crates/mf2_i18n/tests/: build_surface.rs  consumer_modes.rs  core_surface.rs  native_surface.rs  runtime_surface.rs
crates/mf2_i18n/tests/fixtures/build_only/: Cargo.toml  build.rs
crates/mf2_i18n/tests/fixtures/build_only/src/: lib.rs
crates/mf2_i18n/tests/fixtures/mixed_runtime_build/: Cargo.toml  build.rs
crates/mf2_i18n/tests/fixtures/mixed_runtime_build/src/: lib.rs
crates/mf2_i18n/tests/fixtures/runtime_only/: Cargo.toml
crates/mf2_i18n/tests/fixtures/runtime_only/src/: lib.rs
crates/mf2_i18n_build/: Cargo.toml
crates/mf2_i18n_build/src/: artifacts.rs  catalog_reader.rs  config.rs  diagnostic.rs  id_map.rs  lib.rs  locale_sources.rs  manifest.rs  mf2_source.rs  micro_locales.rs  pack_encode.rs  platform.rs  project.rs  project_catalogs.rs  project_pipeline.rs  web_json.rs
crates/mf2_i18n_cli/: Cargo.toml
crates/mf2_i18n_cli/src/: cli.rs  command_build.rs  command_coverage.rs  command_export_web_json.rs  command_extract.rs  command_pseudo.rs  command_validate.rs  main.rs
crates/mf2_i18n_core/: Cargo.toml
crates/mf2_i18n_core/src/: error.rs  language_tag.rs  lib.rs  negotiation.rs  pack.rs  types.rs
crates/mf2_i18n_embedded/: Cargo.toml
crates/mf2_i18n_embedded/src/: lib.rs  runtime.rs
crates/mf2_i18n_leptos/: Cargo.toml
crates/mf2_i18n_native/: Cargo.toml
crates/mf2_i18n_native/src/: error.rs  localizer.rs  macros.rs
crates/mf2_i18n_runtime/: Cargo.toml
crates/mf2_i18n_runtime/src/: error.rs  id_map.rs  lib.rs  loader.rs  runtime.rs  signing.rs
crates/mf2_i18n_server/: Cargo.toml
crates/mf2_i18n_std/: Cargo.toml
crates/mf2_i18n_wasm/: Cargo.toml
crates/mf2_i18n_wasm/src/: intl.rs  lib.rs
crates/mfs_i18n_build/: Cargo.toml
crates/mfs_i18n_build/src/: artifacts.rs  catalog.rs  catalog_reader.rs  compiler.rs  config.rs  extract.rs  extract_pipeline.rs  id_map.rs  lexer.rs  locale_sources.rs  micro_locales.rs  model.rs  pack_encode.rs  platform.rs  project.rs  validator.rs
crates/mfs_i18n_cli/: Cargo.toml
crates/mfs_i18n_cli/src/: cli.rs  command_build.rs  command_coverage.rs  command_extract.rs  command_pseudo.rs  command_sign.rs  command_validate.rs
crates/mfs_i18n_core/: Cargo.toml
crates/mfs_i18n_core/src/: args.rs  catalog.rs  pack_decode.rs
crates/mfs_i18n_embedded/: Cargo.toml
crates/mfs_i18n_embedded/src/: runtime.rs
crates/mfs_i18n_leptos/: Cargo.toml
crates/mfs_i18n_native/: Cargo.toml
crates/mfs_i18n_native/src/: error.rs  lib.rs  localizer.rs  macros.rs
crates/mfs_i18n_runtime/: Cargo.toml
crates/mfs_i18n_runtime/src/: error.rs  id_map.rs  lib.rs  manifest.rs  runtime.rs
crates/mfs_i18n_server/: Cargo.toml
crates/mfs_i18n_std/: Cargo.toml
crates/mfs_i18n_std/src/: lib.rs
crates/mfs_i18n_wasm/: Cargo.toml
crates/mfs_i18n_wasm/src/: lib.rs
docs/: README.md  integration.md  platform-consumption.md  runtime-integration.md
scripts/: package-web.sh  publish-crates.sh
tools/: id_salt.txt
