[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/triesap/mf2_i18n"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
blake3 = "1.6"
ed25519-dalek = { version = "2.1", features = ["std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8"
mf2_i18n_build = { version = "0.1.0", path = "crates/mf2_i18n_build" }
mf2_i18n_core = { version = "0.1.0", path = "crates/mf2_i18n_core" }
mf2_i18n_runtime = { version = "0.1.0", path = "crates/mf2_i18n_runtime" }
mf2_i18n_embedded = { version = "0.1.0", path = "crates/mf2_i18n_embedded" }
mf2_i18n_std = { version = "0.1.0", path = "crates/mf2_i18n_std" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
