[package]
name = "mf2-i18n-std"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Std-target locale formatting backend for Unicode MessageFormat v2 (MF2)."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mf2_i18n_std"

[dependencies]
thiserror = { workspace = true }
mf2-i18n-core = { workspace = true }
chrono = { version = "0.4.44", features = ["unstable-locales"] }
intl_pluralrules = "7.0.2"
num-format = "0.4.4"
pure-rust-locales = "0.8.2"
unic-langid = "0.9"
