[package]
name = "mf2_i18n_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Core types and runtime primitives for Unicode MessageFormat v2 (MF2)."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mf2_i18n_core"

[features]
default = []
std = []

[dependencies]
