[package]
name = "mfs_i18n_build"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Reusable build and project APIs for compiling and validating Unicode MessageFormat v2 (MF2) assets."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[dependencies]
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
mfs_i18n_core = { workspace = true }
