[package]
name = "mfs_i18n_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "CLI tools for building and validating Unicode MessageFormat v2 (MF2) assets."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[dependencies]
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
mfs_i18n_core = { workspace = true }
mfs_i18n_build = { version = "0.1.0", path = "../mfs_i18n_build" }
