[package]
name = "mfs_i18n_embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Embedded-friendly runtime support for Unicode MessageFormat v2 (MF2)."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mfs_i18n_embedded"

[features]
default = []
std = []

[dependencies]
mfs_i18n_core = { workspace = true }

[dev-dependencies]
mfs_i18n_build = { workspace = true }
mfs_i18n_std = { workspace = true }
