[package]
name = "mfs_i18n_native"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Native runtime helpers for Unicode MessageFormat v2 (MF2) i18n."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mfs_i18n_native"

[dependencies]
thiserror = { workspace = true }
mfs_i18n_core = { workspace = true }
mfs_i18n_runtime = { workspace = true }
mfs_i18n_embedded = { workspace = true }
mfs_i18n_std = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
mfs_i18n_build = { workspace = true }
