[package]
name = "mfs_i18n_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Runtime formatting and evaluation for Unicode MessageFormat v2 (MF2)."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mfs_i18n_runtime"

[dependencies]
ed25519-dalek = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
mfs_i18n_core = { workspace = true }
mfs_i18n_std = { workspace = true }

[dev-dependencies]
mfs_i18n_build = { workspace = true }
