[package]
name = "mfs_i18n_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Server-side helpers for Unicode MessageFormat v2 (MF2) runtimes."
keywords = ["i18n", "messageformat", "localization", "unicode", "mf2"]
categories = ["internationalization", "text-processing"]

[lib]
name = "mfs_i18n_server"

[dependencies]
mfs_i18n_runtime = { workspace = true }
